add .gitignore and update it to do exclusions

--- a/.sqlppconfig
+++ b/.sqlppconfig
@@ -1,17 +1,20 @@
-default-connection: "main"
+default-connection: main
 end-on-error: false
-output: "table"
-
+output: table
 connections:
-  main:
-    driver: "sqlite3"
-    connection-string: "test.db"
-  postgres:
-    driver: "postgres"
-    connection-string: "postgres://user:password@localhost/dbname?sslmode=disable"
-  mysql:
-    driver: "mysql"
-    connection-string: "username:password@tcp(127.0.0.1:3306)/database_name"
-  sqlserver:
-    driver: "sqlserver"
-    connection-string: "server=localhost;user id=userdb;password=userpwd;port=1433"
+    main:
+        driver: sqlite3
+        notes: Local SQLite database for testing
+        connection-string: test.db
+    mysql:
+        driver: mysql
+        notes: MySQL production database
+        connection-string: username:password@tcp(127.0.0.1:3306)/database_name
+    postgres:
+        driver: postgres
+        notes: PostgreSQL development database
+        connection-string: postgres://user:password@localhost/dbname?sslmode=disable
+    sqlserver:
+        driver: sqlserver
+        notes: SQL Server enterprise database
+        connection-string: server=localhost;user id=userdb;password=userpwd;port=1433
